--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using labs_intro_azure_data
-@using labs_intro_azure_data.Models
+﻿@using Soat.Masterclass.Labs
+@using Soat.Masterclass.Labs.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
