--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="CosmosDB" asp-action="Index">CosmosDB</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Storage" asp-action="Index">Storage Blob</a>
+                        </li>
                     </ul>
                 </div>
             </div>
